--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ ninja = "^1.10.2"
 opencv-python = "^4.5.3"
 matplotlib = "^3.4.3"
 PyQt5 = "^5.15.4"
+streamlit = "^0.88.0"
+streamlit-drawable-canvas = "^0.8.0"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.8b0", allow-prereleases = true}
